[package]
name = "laukey"
version = "0.1.0"
edition = "2021"
authors = ["Dhananjay Senday"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
log = "0.4.20"
simple_logger = "4.2.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread","signal"] }
serde_json = { version = "1.0", features = [] }
serde = { version =  "1.0.192" , features = ["derive"] }
ulid = "1.1.0"
tantivy = "0.21.1"
